another fix to get rid of border radius on input on mobile

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -35,7 +35,7 @@
   padding: 0.5rem;
   border: 1px solid #d0d0d0;
   border-right: none;
-  border-radius: none !important;
+  border-radius: 0 !important;
   font-family: monospace;
   width: 100px;
   transition: width 1s ease;
