--- a/src/components/PostAPost/PostAPost.css
+++ b/src/components/PostAPost/PostAPost.css
@@ -34,6 +34,7 @@
   height: 50px;
   resize: none;
   outline: 0;
+  border-radius: 0 !important;
   border: 1px solid #d0d0d0;
   transition: height 1s ease;
 
@@ -56,7 +57,7 @@
   width: 100%;
   font-family: monospace;
   outline: 0;
-  border-radius: 0;
+  border-radius: 0 !important;
   border: 1px solid #d0d0d0;
   -webkit-appearance: none;  
   appearance: none;
